--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -35,6 +35,14 @@
   author  = "J L Guermond and R Pasquetti",
   }
 
+@book{Leveque,
+author    = "Leveque R. J.",
+title     = "Numerical methods for conservation laws",
+year      = "1990",
+publisher = "Basel: Birhauser",
+address   = "Reading, Massachusetts"
+}
+
 @book{Toro,
   author    = "E F Toro",
   title     = "Riemann Solvers and numerical methods for fluid dynamics",
@@ -49,7 +57,7 @@
   year    = "2012",
   }
 
-@article{Moose,
+@article{MOOSE,
   title   = "A parallel computational framework for coupled systems of nonlinear equations",
   author  = "D Gaston and C Newsman and G Hansen and D Lebrun-Grandie",
   journal = "Nucl. Eng. Design",
