--- a/ANS-winter2014/bibliography.bib
+++ b/ANS-winter2014/bibliography.bib
@@ -65,3 +65,11 @@
   year    = "2014",
   }  
   
+@Techreport{Berry_2014,
+  author= "R.~A.~Berry and J.~W.~Peterson and H.~Zhang and R.~C.~Martineau and H.~Zhao and L.~Zou and D.~Andrs",
+  title = "RELAP-7 Theory Manual",
+  year = 2014,
+  institution = "Idaho National Laboratory",
+  number = "INL/EXT-14-31366",
+  address = "U. S. A."
+}
