added plots and modifications to the text

--- a/ANS-winter2014/7Eqn_ANS_2014/bibliography.bib
+++ b/ANS-winter2014/7Eqn_ANS_2014/bibliography.bib
@@ -106,3 +106,75 @@
   number = "INL/EXT-14-31366",
   address = "U. S. A."
 }
+  
+@article{Kapila_2001,
+  title   = "Two-phase modeling of deflagration-to-detonation transition in granular materials",
+  author  = "A K Kapila and R Menikoff and J B Bdzil S F Son and D S Stewart",
+  journal = "Phys. Fluids",
+  pages   = "3002-3024",
+  issue = "13",
+  year    = "2001",
+  }
+
+@article{Toumi_1996,
+  title   = "An upwind numerical method for two-fluids two-phases flow models",
+  author  = "I Toumi",
+  journal = "Nucl Sci Eng",
+  pages   = "147-168",
+  issue = "123",
+  year    = "1996",
+  }
+
+@article{Saurel_2001a,
+  title   = "A multiphase Godunov method for compressible multifluid and multiphase flows",
+  author  = "R Saurel and R Abgrall",
+  journal = "J. Comput Physics",
+  pages   = "425-267",
+  issue = "150",
+  year    = "2001",
+  }
+  
+@article{Saurel_2001b,
+  title   = "A multiphase model for compressible flows with interfaces, shocks, detonation waves and cavitation",
+  author  = "R Saurel and O Lemetayer",
+  journal = "J. Comput Physics",
+  pages   = "239-271",
+  issue = "431",
+  year    = "2001",
+  }
+  
+@article{Li_2004,
+  title   = "Difference scheme for two-phase flow",
+  author  = "Q Li and H Feng and T Cai and C Hu",
+  journal = "Appl Math Mech",
+  pages   = "536",
+  issue = "25",
+  year    = "2004",
+  }
+  
+@article{Zein_2010,
+  title   = "Modeling phase transition for compressible two-phase flows applied to metastabe liquids",
+  author  = "A Zein and M Hantke and G Warnecke",
+  journal = "J. Comput Physics",
+  pages   = "2964",
+  issue = "98",
+  year    = "2010",
+  }
+  
+@article{Ambroso_2012,
+  title   = "A Godunov-type method for the seven-equation model of compressible multiphase mixtures",
+  author  = "A Ambroso and C Chalons and P-A Reviart",
+  journal = "Comput. Fluids",
+  pages   = "67-91",
+  issue = "54",
+  year    = "2012",
+  }
+  
+@article{Saurel_2007,
+  title   = "A numerical method for one-dimensional compressible multiphase flows on moving meshes",
+  author  = "R Saurel and J Massoni and F Renaud",
+  journal = "Intern Journ for Num Methods in Fluids",
+  pages   = "1425-1450",
+  issue = "54",
+  year    = "2007",
+  }
