--- a/ANS-winter2014/7Eqn_ANS_2014/7Eqn_ANS_2014.tex
+++ b/ANS-winter2014/7Eqn_ANS_2014/7Eqn_ANS_2014.tex
@@ -87,7 +87,9 @@ $^\dagger$Idaho National Laboratory
 \section{Introduction}
 %
 In this paper, we extend the entropy viscosity method, proposed by Guermond et al. \cite{jlg1, jlg2}
-to the well-posed $1$-D 7-equation model \cite{DEM, berry}. The entropy viscosity technique is a viscous regularization technique
+to the well-posed $1$-D 7-equation two-phase model \cite{DEM, berry}. This model is obtained by integrating the single-phase flow balance equations weighed by a characteristic function for each phase. The resulting system of equations contains non-conservative terms that describe the interaction between phases but also an equation for the volume fraction. It is also known to be unconditionally hyperbolic which is highly desirable when working with approximate Riemann solvers and can treat a wide range of applications. Its particularity comes from the pressure and velocity relaxation terms in the volume fraction, momentum and energy equations that can bring the two phases in equilibrium when using large values of the relaxation parameters. In other words, the 7-equation model can degenerate into the 6 \cite{Toumi_1996} and 5-equation models \cite{Kapila_2001}. The 7-equation model is currently solved on \emph{discontinuous schemes} with approximate Riemann solvers derived from the well-established approach for single-phase flows, while using consistent discretization scheme for the non-conservative terms \cite{Saurel_2001a, Saurel_2001b, Li_2004, Zein_2010, Ambroso_2012}. 
+
+The entropy viscosity technique is a viscous regularization technique
 that satisfies the entropy minimum principle; adequate dissipation terms (viscous fluxes)
 are added to the governing laws while ensuring the entropy minimum principle still holds.
 Viscosity coefficients modulates the magnitude of the added dissipation such that it is
@@ -102,7 +104,7 @@ The entropy method is independent of the type of spatial discretization (finite 
 continuous or discontinuous finite elements, ...) and thus can be applied ubiquitously. 
 The results presented in this summary were obtained with RELAP-7 \cite{Berry_2014}, the next-generation 
 reactor system code build upon the MOOSE multiphysics framework
-\cite{moose} that uses a \emph{Galerkin Continuous Finite Element Method}.
+\cite{moose} that uses a \emph{Continuous Galerkin Finite Element Method}.
 
 In this summary, the $1$-D 7-equation model is recalled along with the dissipative terms used 
 in the entropy method. Definition of the viscosity coefficients is also given and numerical 
@@ -118,23 +120,20 @@ method (the equations are given for the phase $k$ and can be obtained for the ph
 %
 \begin{equation}\label{eq:vf_eq}
   \frac{\partial \alpha_{k} A}{\partial t} + u_{int} A \frac{\partial \alpha_{k}}{\partial x}
-  = A \mu (p_{k} - p_{j}) - \frac{\Gamma A_{int} A}{\rho_{int}} + \boxed{\frac{\partial }{\partial x} \left( A l_k  \right)}
+  = A \mu (p_{k} - p_{j}) + \boxed{\frac{\partial }{\partial x} \left( A l_k  \right)}
 \end{equation}
 %
 \begin{eqnarray}
   \frac{\partial \left( \alpha \rho \right)_{k} A}{\partial t}
   + \frac{\partial \left( \alpha \rho u \right)_{k} A}{\partial x}
-  = - \Gamma A_{int} A
-   + \boxed{\frac{\partial }{\partial x} \left( A f_k \right)}
+  = \boxed{\frac{\partial }{\partial x} \left( A f_k \right)}
 \end{eqnarray}
 %
 \begin{eqnarray}
  && \frac{\partial \left( \alpha \rho u \right)_{k} A}{\partial t}
   + \frac{\partial \alpha_{k} A \left( \rho u^2 + p \right)_{k} }{\partial x}   = p_{int} A \frac{\partial \alpha_{k}}{\partial x} \nonumber \\
  &&+ p_{k} \alpha_{k} \frac{\partial A}{\partial x}
-  + A \lambda (u_{j} - u_{k}) - \Gamma A_{int} u_{int} A - \nonumber \\
-  &&F_{\text{wall friction}, k} - F_{\text{friction}, j}
-  + \left( \alpha \rho \right)_{k} A \vec{g} \cdot \vec{n}_{axis} \nonumber \\
+  + A \lambda (u_{j} - u_{k}) \nonumber \\
  && + \boxed{\frac{\partial }{\partial x} \left[ A \left( g_k + u_k f_k \right) \right] }
 \end{eqnarray}
 %
@@ -145,8 +144,6 @@ method (the equations are given for the phase $k$ and can be obtained for the ph
   \nonumber \\
   &&- \bar{p}_{int} A \mu (p_{k} - p_{j})+ \bar{u}_{int} A \lambda (u_{j} - u_{k})
   \nonumber \\
-  &&+ \Gamma A_{int} \left( \frac{p_{int}}{\rho_{int}} - H_{k, int} \right) A
-  + Q_{int, k} + Q_{\text{wall}, k} \nonumber \\ 
  && + \boxed{\frac{\partial }{\partial x} \left[ A \left( h_k + u_k g_k - \frac{u_k^2}{2}f_k + \rho_k e_k l_k\right) \right] }
 \end{eqnarray}
 %
@@ -171,19 +168,35 @@ where the dissipative terms, boxed in Eq~.\ref{eq:euler_visc}, have the followin
  \end{equation}
 %
 \end{subequations}
-The notation is standard: $\alpha_k$, $\rho_k$, $(\rho \vec{u})_k$ and $(\rho E)_k$ are the volume fraction, the density, the momentum and the total energy for phase $k$, respectively, and will be referred to as the conservative variables. $\vec{u}_k$ is the fluid velocity for phase $k$ and its specific internal energy is denoted by $e_k=E_k-\tfrac{u^2_k}{2}$. The area $A$ is a given and can be spatial-dependent. The stiffened gas equation of state \cite{SGEOS} is used to compute the pressure $P_k$. Definitions of the interfacial variables denoted by the subscript $int$ and the source terms (mass transfer ($\Gamma$), friction and heat source) can be found in \cite{berry}. $\beta_{e,k}$, $\kappa_{e,k}$ and $\mu_{e,k}$ are distinct positive viscosity coefficients and are based on the local entropy production in phase $k$. The definition of the coefficients $\mu_{e,k}$ and $\kappa_{e,k}$ is identical to the one used for the multi-D Euler equations \cite{marco_inl_report} and yield well-scaled dissipative terms in the low-Mach regime \cite{LowMach1, LowMach2, LowMach3}:
+The notation is standard: $\alpha_k$, $\rho_k$, $(\rho \vec{u})_k$ and $(\rho E)_k$ are the volume fraction, the density, the momentum and the total energy for phase $k$, respectively, and will be referred to as the conservative variables. $\vec{u}_k$ is the fluid velocity for phase $k$ and its specific internal energy is denoted by $e_k=E_k-\tfrac{u^2_k}{2}$. The area $A$ is a given and can be spatial-dependent. An equation of state is used to compute the pressure $P_k$. Definitions of the interfacial variables denoted by the subscript $int$ can be found in \cite{berry}. As mentioned in the introduction, each viscosity coefficient is function of an upper bound refer to as the first-order viscosity and denoted by the subscript max, and a high-order viscosity coefficient denoted by the subscript $e$ as follows: 
+%
+\begin{align}
+&\mu^K(\vec{r}_q,t) = \min ( \mu_{max}^K(\vec{r}_q,t), \mu_e^K(\vec{r}_q,t) ) \text{, } \nonumber \\
+&\kappa^K(\vec{r}_q,t) = \min ( \kappa_{max}^K(\vec{r}_q,t), \kappa_e^K(\vec{r}_q,t) )\nonumber  \\ 
+\text{ and } &\beta^K(\vec{r}_q,t) = \min ( \beta_{max}^K(\vec{r}_q,t), \beta_e^K(\vec{r}_q,t) ) \nonumber
+\end{align}
+%
+where $K$ is a given element of the mesh, and $\vec{r}_q$ is a quadrature point location within cell $K$.
+The first-order viscosity coefficients, $\mu_{max}$ and $\kappa_{max}$, are only present in the continuity, momentum and energy equations of each phase, and thus are defined proportional to the local maximum eigenvalue $|| \vec{u} || +c $. 
+%
+\begin{align}
+&\kappa_{max}^K(\vec{r}_q,t) = \mu_{max}^K(\vec{r}_q,t) = \frac{h^k}{2} (|| \vec{u}(\vec{r}_q,t) || +c(\vec{r}_q,t) ) \nonumber \\
+&\beta_{max}^K(\vec{r}_q,t) = \frac{h^k}{2} ||\vec{u}_{int}(\vec{r}_q,t) ||, \nonumber
+\end{align}
+%
+where $h^k$ is the grid size. On the other hand, the first-order viscosity coefficient $\beta_{max}$ is defined proportional to the eigenvalue $\vec{u}_{int}$ since intimately related to the void fraction equation. The high-order viscosity coefficients, $\beta_{e,k}$, $\kappa_{e,k}$ and $\mu_{e,k}$ are distinct positive viscosity coefficients and are based on the local entropy production in phase $k$. The definition of the coefficients $\mu_{e,k}$ and $\kappa_{e,k}$ is identical to the one used for the multi-D Euler equations \cite{marco_inl_report} and yield well-scaled dissipative terms in the low-Mach regime \cite{LowMach1, LowMach2, LowMach3}:
 %
 \begin{subequations}
 \label{eq:ent_visc_coeff2}
 \begin{equation}
-\mu^K_{e,k}(\vec{r}_q,t) =  h_K^2 \frac{| \resinew^K(\vec{r}_q,t) |}{M \rho \|\vec{u}\|^2 + (1-M) \rho c^2}  
+\kappa^K_{e,k}(\vec{r}_q,t) =  h_K^2 \frac{| \resinew^K(\vec{r}_q,t) |}{\rho c^2}  
 \end{equation}
 \begin{equation}
-\kappa^K_{e,k}(\vec{r}_q,t) = Pr_k \, \mu^K_e(\vec{r}_q,t)
+\mu^K_{e,k}(\vec{r}_q,t) = Pr_k \, \mu^K_e(\vec{r}_q,t)
 \end{equation}
 \end{subequations}
 %
-where $c_k$ is the phase speed of sound and the weighting factor is the local Mach number, $M_k=\|\vec{u_k}\|/c_k$. $K$ is a given element of the mesh, and $\vec{r}_q$ is a quadrature point location within cell $K$. $\Pr_k$ is the Prandtl number; see \cite{jlg1} for additional details. The entropy residual is denoted by $\resinew$ and its definition is recalled in \eqt{eq:ent2_res}.  
+where $c_k$ is the phase speed of sound and the weighting factor is the local Mach number, $M_k=\|\vec{u_k}\|/c_k$. $\Pr_k$ is the Prandtl number; see \cite{jlg1} for additional details. The entropy residual is denoted by $\resinew$ and its definition is recalled in \eqt{eq:ent2_res}.  
 %
 \begin{equation}
 \label{eq:ent2_res}
@@ -210,51 +223,83 @@ where $s_{\alpha,k} = \alpha_k^2/2$ can be interpreted as the entropy function a
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Results and Analysis}
 
-The $1$-D seven-equation model with viscous stabilization is discretized with {\it continuous} finite elements in space and BDF2 in time using the multiphysics framework RELAP-7. The resulting nonlinear system of equations at each time step is solved using a Jacobian-free Newton Krylov technique. We present one sample result for a 1-D straight pipe of area $A = 10^{-4}$ $m^2$ with a wall heat source (the wall temperature is constant: $T_w = 550$ $K$). The stiffened gas equation of state is used to model the liquid and vapor phases with the parameters taken from \cite{SGEOS} for each phase. A static pressure of $P=7.1$ $MPa$ is set at the outlet. The volume fraction, the enthalpy and the mass flow rate are specified at the inlet for each phase. The wall friction coefficient is constant and the same for the two phases, $f_w = 4 \times 10^{-2}$. The interfacial area $A_{int}$ is set to a large value to equalize the pressure and velocity of the two phases. The initial conditions are uniform. The geometry is discretized with a uniform mesh of 100 elements and the simulation is run with $CFL=100$  until a steady state is obtained. 
+The $1$-D seven-equation model with viscous stabilization is discretized with {\it continuous} finite elements in space and BDF2 in time using the multiphysics framework RELAP-7. The resulting nonlinear system of equations at each time step is solved using a Jacobian-free Newton Krylov technique. We present one sample result for a 1-D shock tube of length $L=1$ $m$ and area $A=1$ $m^2$ filled with two gas phases in equilibrium (same pressure and velocity) described by the Ideal Gas equation of state with $\gamma_1 = 3$ and $\gamma_2 = 1.4$. The diaphragm separates the pipe in two chambers with a high pressure ($P_{left} = 1$ $MPa$) on the left side and a low pressure ($P_{right} = 0.1$ $MPa$) in the right side. Both fluids are initially at rest. The volume fraction is set to $0.5$ which means each side of the chamber contains a mixture of two fluids with different equation of state parameters. The pressure and velocity relaxation coefficients are computed using the expression provided in \eqt{E-R:85} and \eqt{E-R:86}, respectively. 
+%
+\begin{subequations}
+\begin{equation}\label{E-R:85}
+  \lambda_u = \frac{1}{2} \mu_P Z_{1} Z_{2}
+\end{equation}
+\begin{equation}\label{E-R:86}
+  \mu_P = \frac{A_{int}}{Z_{1}+Z_{2}}
+\end{equation}
+\end{subequations}
+%
+where the interfacial area is set to a large value, $A_{int} = 10^4 m^{-1}$, so that the two phases achieve pressure and velocity equilibrium at all time. The geometry is discretized with an uniform mesh of 500 cells and run with a $CFL$ of one until $t_{final} = 305$ $\mu s$. The numerical results are presented from \fig{fig:pressure} to \ref{fig:viscosity_coeff_beta}. This shock tube test can also be found in \cite{Saurel_2007} and use for eyeball comparison.\\
 
-The pressure, temperature, velocity, volume fraction and viscosity coefficients profiles are plotted from \fig{fig:pressure} through \fig{fig:viscosity_coeff}. As expected, the liquid and vapor pressure profiles are identical (\fig{fig:pressure}) and decrease through the domain because of the wall friction force. The liquid and velocity profiles are also identical as shown in \fig{fig:velocity} and increase due to the wall friction force and the heat addition. In \fig{fig:temperature}, the liquid and vapor temperature profiles are distinct and have  the same variation: the temperature rises since energy is added to the flow by the wall heat source. The variations of the vapor and liquid volume fractions are opposite: vapor is produced since the liquid temperature is larger than the saturation temperature. All of the profiles are smooth and do not display any spurious oscillations: the high-order viscosity coefficients shown in \fig{fig:viscosity_coeff}, $\kappa_{e,k}$ and $\beta_{e,k}$, are well-scaled and large enough to stabilize the numerical solution without altering it (only $\beta_{e,liquid}$ is plotted since $\beta_{e,liquid}=\beta_{e,vapor}$). It is also noted the difference of several order of magnitude between the high-order and first-order viscosity coefficients denoted by the subscript $max$. The first-order viscosity coefficients are over-dissipative and ill-scaled in the low Mach regime \cite{marco_inl_report}.
+As expected, the two fluids have the same pressure and velocity profiles as shown in \fig{fig:pressure} and \fig{fig:velocity}, respectively. The shock is well resolved and does not display any instability. The density profiles The volume fraction varies because of the pressure relaxation term (\eqt{eq:vf_eq}) and displays a shock wave around $x=0.7$ $m$ as shown in \fig{fig:volume_fraction}. Consequently, the viscosity coefficient $\beta_k$ is peaked in the shock region.
+%of area $A = 10^{-4}$ $m^2$ with a wall heat source (the wall temperature is constant: $T_w = 550$ $K$). The stiffened gas equation of state is used to model the liquid and vapor phases with the parameters taken from \cite{SGEOS} for each phase. A static pressure of $P=7.1$ $MPa$ is set at the outlet. The volume fraction, the enthalpy and the mass flow rate are specified at the inlet for each phase. The wall friction coefficient is constant and the same for the two phases, $f_w = 4 \times 10^{-2}$. The interfacial area $A_{int}$ is set to a large value to equalize the pressure and velocity of the two phases (the 7-equation model degenerates in to the 5-equation model). The initial conditions are uniform. The geometry is discretized with a uniform mesh of 100 elements and the simulation is run with $CFL=100$  until a steady state is obtained. 
+%
+%The pressure, temperature, velocity, volume fraction and viscosity coefficients profiles are plotted from \fig{fig:pressure} through \fig{fig:viscosity_coeff}. As expected, the liquid and vapor pressure profiles are identical (\fig{fig:pressure}) and decrease through the domain because of the wall friction force. The liquid and velocity profiles are also identical as shown in \fig{fig:velocity} and increase due to the wall friction force and the heat addition. In \fig{fig:temperature}, the liquid and vapor temperature profiles are distinct and have  the same variation: the temperature rises since energy is added to the flow by the wall heat source. The variations of the vapor and liquid volume fractions are opposite: vapor is produced since the liquid temperature is larger than the saturation temperature. All of the profiles are smooth and do not display any spurious oscillations: the high-order viscosity coefficients shown in \fig{fig:viscosity_coeff}, $\kappa_{e,k}$ and $\beta_{e,k}$, are well-scaled and large enough to stabilize the numerical solution without altering it (only $\beta_{e,liquid}$ is plotted since $\beta_{e,liquid}=\beta_{e,vapor}$). It is also noted the difference of several order of magnitude between the high-order and first-order viscosity coefficients denoted by the subscript $max$. The first-order viscosity coefficients are over-dissipative and ill-scaled in the low Mach regime \cite{marco_inl_report}.
 %
 \begin{figure}[H]
         \centering
         \begin{subfigure}[b]{0.5\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{plots/ANS_WINTER_2014_7Eqn_pressure.png}
+                \includegraphics[width=\textwidth]{plots/relaxation_two_phases_pressure.png}
                 \caption{Pressure}
                 \label{fig:pressure}
         \end{subfigure}%
-
+\end{figure}
+\begin{figure}[H]
         \begin{subfigure}[b]{0.5\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{plots/ANS_WINTER_2014_7Eqn_temperature.png}
-                \caption{Temperature}
-                \label{fig:temperature}
+                \includegraphics[width=\textwidth]{plots/relaxation_two_phases_density.png}
+                \caption{Density}
+                \label{fig:density}
         \end{subfigure}%
-                
+
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{plots/ANS_WINTER_2014_7Eqn_velocity.png}
+                \includegraphics[width=\textwidth]{plots/relaxation_two_phases_velocity.png}
                 \caption{Velocity}
                 \label{fig:velocity}
         \end{subfigure}
-\end{figure}
-%
-\begin{figure}[H]
+
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{plots/ANS_WINTER_2014_7Eqn_volume_fraction.png}
+                \includegraphics[width=\textwidth]{plots/relaxation_two_phases_volume_fraction.png}
                 \caption{Volume fraction}
                 \label{fig:volume_fraction}
         \end{subfigure}
-        
+\end{figure}
+\begin{figure}[H]        
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{plots/ANS_WINTER_2014_7Eqn_viscosity.png}
-                \caption{Viscosity coefficients}
-                \label{fig:viscosity_coeff}
+                \includegraphics[width=\textwidth]{plots/relaxation_two_phases_liquid_viscosity_kappa_mu.png}
+                \caption{Viscosity coefficients for phase $1$}
+                \label{fig:viscosity_coeff_liq}
         \end{subfigure}        
-        \caption{Steady-state profiles for liquid water and vapor phases.}
-				\label{fig:2d_hump}
+				
+        \begin{subfigure}[b]{0.495\textwidth}
+                \centering
+                \includegraphics[width=\textwidth]{plots/relaxation_two_phases_vapor_viscosity_kappa_mu.png}
+                \caption{Viscosity coefficients for phase $2$}
+                \label{fig:viscosity_coeff_vap}
+        \end{subfigure}        
+				
+        \begin{subfigure}[b]{0.495\textwidth}
+                \centering
+                \includegraphics[width=\textwidth]{plots/relaxation_two_phases_liquid_beta.png}
+                \caption{Viscosity coefficients for volume fraction}
+                \label{fig:viscosity_coeff_beta}
+        \end{subfigure}        
 \end{figure}
+%\begin{figure}[H]
+%\centering
+%\includegraphics[width=0.495\textwidth]{plots/relaxation_two_phases_liquid_beta.png}
+%\caption{Viscosity coefficients}
+%\label{fig:viscosity_coeff_beta}
+%\end{figure}        
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conclusions}
